--- a/src/components/ImageGallery/ImageGallery.css
+++ b/src/components/ImageGallery/ImageGallery.css
@@ -1,58 +1,64 @@
+/* When the width of the window is less than 786px, hide the sidebar completely */
 @media (max-width: 768px) {
-    #sidebar, #toggle-sidebar {
-        display:none;
+    #sidebar,
+    #toggle-sidebar {
+        display: none;
     }
-    #sidebar.active, #toggle-sidebar {
-        display:none;
+    #sidebar.active,
+    #toggle-sidebar {
+        display: none;
     }
 }
 
+/* A container that holds both the sidebar and main content */
 .content-wrapper {
     display: flex;
     width: 100%;
 }
 
-#toggle-sidebar, #content.active > #toggle-sidebar {
-    background-color:#212529;
-    color:#FFFCF2;
-    padding-top:2px;
-    padding-right:3px;
-    font-size:20px;
-    border-radius:0% 100% 100% 0%;
-    width:40px;
-    height:40px;
-    text-align:center;
+/* Styling for the div that toggles the sidebar to be open/closed. */
+#toggle-sidebar,
+#content.active > #toggle-sidebar {
+    background-color: #212529;
+    color: #fffcf2;
+    padding-top: 2px;
+    padding-right: 3px;
+    font-size: 20px;
+    border-radius: 0% 100% 100% 0%;
+    width: 40px;
+    height: 40px;
+    text-align: center;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 999;
-    margin-left:0;
-    margin-top:5px;
+    margin-left: 0;
+    margin-top: 5px;
     transition: all 0.5s;
 }
 
-/* What the sidebar toggle button looks like when the sidebar is open */
+/* Override the sidebar toggle styles when the sidebar is open */
 #content > #toggle-sidebar {
-    background-color:#4B88A2;
-    padding-right:0px;
-    border-radius:100%;
+    background-color: #4b88a2;
+    padding-right: 0px;
+    border-radius: 100%;
     transition: all 0.5s;
-    margin-left:-22px;
-    color:#FFFCF2;
+    margin-left: -22px;
+    color: #fffcf2;
 }
 
 #sidebar {
-    background-color:#212529;
-    color: #FFFCF2;
+    background-color: #212529;
+    color: #fffcf2;
     width: 300px;
     position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
     z-index: 999;
-    padding:0.5rem;
+    padding: 0.5rem;
     transition: all 0.5s;
-    padding-top:35px;
+    padding-top: 35px;
 }
 
 #sidebar.active {
@@ -68,7 +74,7 @@
     top: 0;
     right: 0;
     transition: all 0.5s;
-    padding:30px;
+    padding: 30px;
 }
 
 #content.active {
