--- a/src/components/ImageGallery/ImageGallery.css
+++ b/src/components/ImageGallery/ImageGallery.css
@@ -19,7 +19,7 @@
 /* Styling for the div that toggles the sidebar to be open/closed. */
 #toggle-sidebar,
 #content.active > #toggle-sidebar {
-    background-color: #212529;
+    background-color: #252422;
     color: #fffcf2;
     padding-top: 2px;
     padding-right: 3px;
@@ -28,9 +28,9 @@
     width: 40px;
     height: 40px;
     text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    top: 50px;
+    left: 0px;
     z-index: 999;
     margin-left: 0;
     margin-top: 5px;
@@ -43,20 +43,20 @@
     padding-right: 0px;
     border-radius: 100%;
     transition: all 0.5s;
-    margin-left: -22px;
+    left: 280px;
     color: #fffcf2;
 }
 
 #sidebar {
-    background-color: #212529;
+    background-color: #353431;
     color: #fffcf2;
     width: 300px;
     position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
-    z-index: 999;
-    padding: 40px 10px 10px 20px;
+    z-index: 900;
+    padding: 55px 10px 10px 20px;
     transition: all 0.5s;
 }
 
@@ -67,16 +67,18 @@
 
 #content {
     width: calc(100% - 300px);
-    min-height: 100vh;
+    height: 100%;
     transition: all 0.5s;
     position: absolute;
-    top: 0;
+    top: 18px;
     right: 0;
     transition: all 0.5s;
     padding: 30px;
+    overflow-x: auto;
 }
 
 #content.active {
     width: 100%;
     transition: all 0.5s;
+    overflow-x: auto;
 }
