--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 120%;
+    overflow: hidden;
 }
 
 code {
@@ -15,18 +16,22 @@ code {
         monospace;
 }
 
-.btn-primary-custom {
-    background-color: #4b88a2;
-    border-color: #4b88a2;
-    outline-color: #4b88a2;
-}
-
+.btn-primary-custom,
 .btn-primary-custom:hover,
 .btn-primary-custom:active,
 .btn-primary-custom:focus {
     background-color: #4b88a2;
     border-color: #4b88a2;
     outline-color: #4b88a2;
+}
+
+.btn-secondary-custom,
+.btn-secondary-custom:hover,
+.btn-secondary-custom:active,
+.btn-secondary-custom:focus {
+    background-color: #353431;
+    border-color: #353431;
+    outline-color: #353431;
 }
 
 .top-row {
