--- a/src/components/ImageGallery/ImageGallery.css
+++ b/src/components/ImageGallery/ImageGallery.css
@@ -10,6 +10,18 @@
     }
 }
 
+@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2 !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3 !important;
+    }
+}
+
 /* A container that holds both the sidebar and main content */
 .content-wrapper {
     display: flex;
